@@ -1,3 +1,8 @@
+Thu Mar 17 09:55:03 UTC 2011  Olli Savia  <ops@iki.fi>
+
+        * orbsvcs/orbsvcs/FtRtEvent/Utils/UUID.cpp:
+          Fixes due to ACE rand_r() changes.
+
 Thu Mar 17 09:45:43 UTC 2011  Olli Savia  <ops@iki.fi>
 
         * orbsvcs/tests/EC_Mcast/EC_Mcast.h:
